Add array and related builtin functions